# waltham_gis

./: .dvcignore  .gitignore  .pycodestyle  CLAUDE.md  LICENSE.md  likely_homeowners.csv.dvc  pyproject.toml  readme.md
.claude/: settings.local.json
.dvc/: config
.github/workflows/: static.yml  tests.yml
data/: .gitignore  Buildings.dvc  README.md  connect_db.py  likely_homeowners.csv.dvc  zoning_rules_table.csv
investigations/: __init__.py
investigations/2025_adu_rezoning/: before_upzoning.ipynb
investigations/adu_rezoning_2025/: before_upzoning.ipynb  first_amendment_draft.ipynb  fix_buildings.py  state_guidelines.ipynb
investigations/demographic_changes/: notebook.ipynb
investigations/development_regression/: fetch.py
investigations/development_turnover/: fetch.py
investigations/historical_review/: explainer.md  notebook.ipynb  notebook.py
investigations/housing_density/: calc_local_density.py  notebook.ipynb
investigations/illegal_zoning/: .gitignore  __init__.py  illegal_zoning.md  illegal_zoning.qgz  notebook.ipynb
investigations/mbta_c_current_zoning/: MBTACalculator.py  mbta_zoning_calc.py  notebook.ipynb
investigations/mbta_c_interim_compliance/: notebook.ipynb
investigations/mbta_communities/: notebook.ipynb
investigations/mbta_communities_act/: before_upzoning.ipynb  interim_compliance.ipynb  mbta_zoning_calc.py  mbta_zoning_changes.qgz
investigations/mbta_zoning_changes/: MBTACalculator.py  mbta_zoning_calc.py  mbta_zoning_changes.qgz  notebook.ipynb
investigations/owner_occupied_homes/: notebook.ipynb
investigations/parking_mandate/: notebook.ipynb
investigations/residential_exemption/: .gitignore  script.py
investigations/school_capacities/: notebook.ipynb
investigations/sfh_vs_mfh/: notebook.ipynb
published/: historical_review.html
tests/: test_mbta_zoning_rules.py
useful_scripts/: README.md  parcel_buffer.py
waltham/: README.md  constants.py  parcel.py  parcel_to_zone.py  quirks.py  zone.py
