[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Timothy Riley", email = "timothyjohnriley@gmail.com"},
]
dependencies = [
    "geopandas>=0.12.2",
    "dvc>=2.56.0",
    "jupyter>=1.0.0",
    "tqdm>=4.64.1",
    "seaborn>=0.12.2",
    "dvc-gdrive>=2.19.1",
    "dbfread>=2.0.7",
    "ipympl>=0.9.3",
    "mplcursors>=0.5.2",
    "openpyxl>=3.1.2",
    "ortools>=9.5.2237",
    "pytest>=7.4.3",
    "pycodestyle>=2.11.1",
    # https://github.com/huggingface/datasets/issues/6330
    "fsspec<2023.10.0",
    "pytest-cov>=4.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
