[project]
name = ""
version = "1.0"
description = ""
authors = [
    {name = "Timothy Riley", email = "timothyjohnriley@gmail.com"},
]
dependencies = [
    'pywin32==308;platform_system == "Windows"',     
    "geopandas>=0.12.2",
    "jupyter>=1.0.0",
    "tqdm>=4.64.1",
    "seaborn>=0.12.2",
    "dbfread>=2.0.7",
    "ipympl>=0.9.3",
    "mplcursors>=0.5.2",
    "openpyxl>=3.1.2",
    "pytest>=7.4.3",
    "pycodestyle>=2.11.1",
    # https://github.com/huggingface/datasets/issues/6330
    "pytest-cov>=4.1.0",
    "folium>=0.15.0",
    "sqlalchemy>=2.0.30",
    "geoalchemy2>=0.15.2",
    "scikit-learn>=1.5.1",
    "psycopg[binary,pool]>=3.2.3",
    "owslib>=0.32.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
